# llama.cpp

./: CMakeLists.txt
debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  llama-config.cmake  llama-version.cmake  llama.cpp.sln  llama.pc
debug/common/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters
debug/example/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LLMPipelineServer.vcxproj  LLMPipelineServer.vcxproj.filters  cmake_install.cmake
debug/example/ModelTypes/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
debug/ggml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml.sln
debug/ggml/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-base.vcxproj  ggml-base.vcxproj.filters  ggml-cpu.vcxproj  ggml-cpu.vcxproj.filters  ggml.vcxproj  ggml.vcxproj.filters
debug/ggml/src/ggml-cpu/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
debug/ggml/src/ggml-vulkan/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+3 more)
debug/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  llama.vcxproj  llama.vcxproj.filters
example/: CMakeLists.txt  LLMPipelineServer.cpp  ModelParams.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
example/ModelTypes/: CMakeLists.txt  IModel.h  ModelTypes.h  Model_LLM.cpp  Model_LLM.h
src/: CMakeLists.txt  llama-extern.cpp
(+5 files in other folders)
